@@ -54,7 +54,6 @@ class WC_Payments_Fraud_Service {
 		add_filter( 'wcpay_prepare_fraud_config', [ $this, 'prepare_fraud_config' ], 10, 2 );
 		add_filter( 'wcpay_current_session_id', [ $this, 'get_session_id' ] );
 		add_action( 'init', [ $this, 'link_session_if_user_just_logged_in' ] );
-		add_action( 'admin_init', [ $this, 'send_forter_cookie_token' ] );
 	}
 
 	/**
@@ -69,8 +68,6 @@ class WC_Payments_Fraud_Service {
 		switch ( $service_id ) {
 			case 'sift':
 				return $this->prepare_sift_config( $config );
-			case 'forter':
-				return $this->prepare_forter_config( $config );
 		}
 		return $config;
 	}
@@ -122,23 +119,6 @@ class WC_Payments_Fraud_Service {
 	}
 
 	/**
-	 * Adds site-specific config needed to initialize the Forter anti-fraud JS.
-	 *
-	 * @param array $config Associative array with the Forter-related configuration returned from the server.
-	 *
-	 * @return array|NULL Assoc array, ready for the client to consume, or NULL if the client shouldn't enqueue this script.
-	 */
-	private function prepare_forter_config( $config ) {
-		$account_id = $this->account->get_stripe_account_id();
-		if ( ! is_admin() || get_option( 'wcpay_forter_token_sent' ) === $account_id ) {
-			// Only include Forter in admin pages and if the token has not been sent.
-			return null;
-		}
-
-		return $config;
-	}
-
-	/**
 	 * Called after the WooCommerce session has been initialized. Check if the current user has just logged in,
 	 * and sends that information to the server to link the current browser session with the user.
 	 *
@@ -175,7 +155,7 @@ class WC_Payments_Fraud_Service {
 
 		$fraud_config = $this->account->get_fraud_services_config();
 		if ( ! isset( $fraud_config['sift'] ) ) {
-			// Only Sift needs to send data when the user logs in.
+			// If Sift isn't enabled, we don't need to link the session.
 			return;
 		}
 
@@ -190,44 +170,6 @@ class WC_Payments_Fraud_Service {
 			$this->payments_api_client->link_session_to_customer( $this->get_cookie_session_id(), $customer_id );
 		} catch ( API_Exception $e ) {
 			Logger::log( '[Tracking] Error when linking session with user: ' . $e->getMessage() );
-		}
-	}
-
-	/**
-	 * Send $token param received to the WCPay server so the current browsing session
-	 * can be linked to the account. It will only be sent once.
-	 *
-	 * @param string|null $token Forter token received from the client.
-	 */
-	public function send_forter_token( string $token = null ) {
-		if ( ! $this->account->is_stripe_connected() || empty( $token ) || ! isset( $this->account->get_fraud_services_config()['forter'] ) ) {
-			return;
-		}
-
-		$account_id = $this->account->get_stripe_account_id();
-		if ( get_option( 'wcpay_forter_token_sent' ) !== $account_id ) {
-			// Optimistically set the "Forter token already sent" database option, so it's not sent twice if there are several admin requests in parallel.
-			update_option( 'wcpay_forter_token_sent', $account_id );
-			try {
-				$response = $this->payments_api_client->send_forter_token( $token );
-				if ( ! isset( $response['result'] ) || 'success' !== $response['result'] ) {
-					delete_option( 'wcpay_forter_token_sent' );
-				}
-			} catch ( API_Exception $e ) {
-				delete_option( 'wcpay_forter_token_sent' );
-				Logger::log( '[Tracking] Error when sending Forter token: ' . $e->getMessage() );
-			}
-		}
-	}
-
-	/**
-	 * If a "forterToken" cookie is present call `send_forter_token` with it.
-	 */
-	public function send_forter_cookie_token() {
-		if ( isset( $_COOKIE['forterToken'] ) ) {
-			// The cookie contents are opaque to us, so it's better to not sanitize them.
-			//phpcs:ignore WordPress.Security.ValidatedSanitizedInput
-			$this->send_forter_token( $_COOKIE['forterToken'] );
 		}
 	}
 
