@@ -57,155 +57,7 @@ class WC_Payments_Fraud_Service_Test extends WP_UnitTestCase {
 		$this->assertNotFalse( has_filter( 'wcpay_prepare_fraud_config', [ $this->fraud_service, 'prepare_fraud_config' ] ) );
 		$this->assertNotFalse( has_filter( 'wcpay_current_session_id', [ $this->fraud_service, 'get_session_id' ] ) );
 		$this->assertNotFalse( has_action( 'init', [ $this->fraud_service, 'link_session_if_user_just_logged_in' ] ) );
-		$this->assertNotFalse( has_action( 'admin_init', [ $this->fraud_service, 'send_forter_cookie_token' ] ) );
 	}
-
-	public function test_prepare_fraud_config_forter_returns_null_when_is_not_admin() {
-		$this->assertNull( $this->fraud_service->prepare_fraud_config( [], 'forter' ) );
-	}
-
-	public function test_prepare_fraud_config_forter_returns_null_when_token_already_sent() {
-		update_option( 'wcpay_forter_token_sent', 'acct_id' );
-
-		$this->mock_account
-			->method( 'get_stripe_account_id' )
-			->willReturn( 'acct_id' );
-
-		$this->assertNull( $this->fraud_service->prepare_fraud_config( [], 'forter' ) );
-	}
-
-	public function test_prepare_fraud_config_forter_returns_config_when_is_admin() {
-		$this->set_is_admin();
-		$this->assertSame( [], $this->fraud_service->prepare_fraud_config( [], 'forter' ) );
-	}
-
-	public function test_send_forter_token_returns_early_without_account_connected() {
-		$this->mock_account
-			->method( 'is_stripe_connected' )
-			->willReturn( false );
-		$this->mock_account
-			->method( 'get_fraud_services_config' )
-			->willReturn( [ 'forter' => [] ] );
-
-		$this->mock_account
-			->expects( $this->never() )
-			->method( 'get_stripe_account_id' );
-
-		$this->fraud_service->send_forter_token( 'token' );
-	}
-
-	public function test_send_forter_token_returns_early_without_token() {
-		$this->mock_account
-			->method( 'is_stripe_connected' )
-			->willReturn( true );
-		$this->mock_account
-			->method( 'get_fraud_services_config' )
-			->willReturn( [ 'forter' => [] ] );
-
-		$this->mock_account
-			->expects( $this->never() )
-			->method( 'get_stripe_account_id' );
-
-		$this->fraud_service->send_forter_token();
-	}
-
-	public function test_send_forter_token_returns_early_without_forter_enabled() {
-		$this->mock_account
-			->method( 'is_stripe_connected' )
-			->willReturn( true );
-		$this->mock_account
-			->method( 'get_fraud_services_config' )
-			->willReturn( [] );
-
-		$this->mock_account
-			->expects( $this->never() )
-			->method( 'get_stripe_account_id' );
-
-		$this->fraud_service->send_forter_token( 'token' );
-	}
-
-	public function test_send_forter_token_send_only_once() {
-		$this->mock_account
-			->method( 'is_stripe_connected' )
-			->willReturn( true );
-		$this->mock_account
-			->method( 'get_fraud_services_config' )
-			->willReturn( [ 'forter' => [] ] );
-		$this->mock_account
-			->method( 'get_stripe_account_id' )
-			->willReturn( 'acct_id' );
-
-		update_option( 'wcpay_forter_token_sent', 'acct_id' );
-
-		$this->mock_api_client
-			->expects( $this->never() )
-			->method( 'send_forter_token' );
-
-		$this->fraud_service->send_forter_token( 'token' );
-	}
-
-	public function test_send_forter_token_exception() {
-		$this->mock_account
-			->method( 'is_stripe_connected' )
-			->willReturn( true );
-		$this->mock_account
-			->method( 'get_fraud_services_config' )
-			->willReturn( [ 'forter' => [] ] );
-		$this->mock_account
-			->method( 'get_stripe_account_id' )
-			->willReturn( 'acct_id' );
-
-		$this->mock_api_client
-			->method( 'send_forter_token' )
-			->with( 'token' )
-			->willThrowException( new API_Exception( 'Generic Error Message', 'generic_error', 500 ) );
-
-		$this->fraud_service->send_forter_token( 'token' );
-
-		$this->assertFalse( get_option( 'wcpay_forter_token_sent' ) );
-
-	}
-
-
-	public function test_send_forter_token_succeed() {
-		$this->mock_account
-			->method( 'is_stripe_connected' )
-			->willReturn( true );
-		$this->mock_account
-			->method( 'get_fraud_services_config' )
-			->willReturn( [ 'forter' => [] ] );
-		$this->mock_account
-			->method( 'get_stripe_account_id' )
-			->willReturn( 'acct_id' );
-
-		$this->mock_api_client
-			->method( 'send_forter_token' )
-			->with( 'token' )
-			->willReturn( [ 'result' => 'success' ] );
-
-		$this->fraud_service->send_forter_token( 'token' );
-
-		$this->assertSame( 'acct_id', get_option( 'wcpay_forter_token_sent' ) );
-	}
-
-	public function send_forter_cookie_token_do_nothing_without_cookie() {
-		$this->mock_account
-			->expects( $this->never() )
-			->method( 'is_stripe_connected' );
-
-		$this->fraud_service->send_forter_cookie_token();
-	}
-
-	public function send_forter_cookie_token_proceed() {
-		$_COOKIE['forterToken'] = 'token';
-
-		$this->mock_account
-			->expects( $this->once() )
-			->method( 'is_stripe_connected' );
-
-		$this->fraud_service->send_forter_cookie_token();
-	}
-
 
 	private function set_is_admin() {
 		global $current_screen;
